@@ -1,12 +1,14 @@
-package Service;
+package web.dao;
 
-import Model.Car;
+import org.springframework.stereotype.Repository;
+import web.model.Car;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public class CarServiceImp implements CarService{
+@Repository
+public class CarDaoImp implements CarDao{
     @Override
     public List<Car> getCars(int count) {
         List<Car> cars = new ArrayList<>();
@@ -15,6 +17,6 @@ public class CarServiceImp implements CarService{
         cars.add(new Car("Car3", "MT", 2003));
         cars.add(new Car("Car4", "NT", 2024));
         cars.add(new Car("Car5", "AT", 2021));
-        return cars.stream().limit(count).toList();
+        return cars.stream().limit(count).collect(Collectors.toList());
     }
 }
